--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.maximum-pool-size=2
+spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 
 spring.jpa.database=POSTGRESQL
